# biblioteca-cursos-tecnicos

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: pyproject.toml
backend/backend/: app.py
backend/database/: biblioteca.db
backend/database/models/: __init__.py  curso.py  disciplina.py  livro.py  map_curso_disciplina.py
backend/scripts/: scraping.py
backend/utils/: __init__.py  book_populate.py  database.py  scraping.py
docs/: Modelo_bd.brM3
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.css  App.jsx
